--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "description": "Lsi On Duty",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "client": "npm start --prefix client",
+    "start": "node server.js",
+    "devStart": "nodemon server.js",
+    "dev": "concurrently \"npm run devStart\" \"npm run client\""
   },
   "keywords": [],
   "author": "Tomasz Steć",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.10.1",
     "validator": "^13.1.1"
   },
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "nodemon": "^2.0.4"
   }
 }
