--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mongoose": "^5.10.1",
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.1.1",
     "validator": "^13.1.1"
   },
   "devDependencies": {
