--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
+    "bulma-extensions": "^6.2.7",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -23,11 +24,13 @@
     "moment": "^2.27.0",
     "mongoose": "^5.10.1",
     "react-icons": "^3.11.0",
+    "react-query": "^2.16.1",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.1.1",
     "validator": "^13.1.1"
   },
   "devDependencies": {
+    "@creativebulma/bulma-badge": "^1.0.1",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.4"
   }
