--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "client": "npm start --prefix client",
     "start": "node server.js",
     "devStart": "nodemon server.js",
-    "dev": "concurrently \"npm run devStart\" \"npm run client\""
+    "dev": "concurrently \"npm run devStart\" \"npm run client\"",
+      "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "Tomasz Steć",
